--- a/client/app/scenes/Auth/style.scss
+++ b/client/app/scenes/Auth/style.scss
@@ -1,17 +1,22 @@
 .auth-container {
-  height: 100%;
-  position: absolute;
+  //height: 100%;
+  //position: absolute;
+  min-height: 600px;
   top: 0;
   display: flex;
   align-items: center;
   z-index: 0;
+  margin: auto;
+  text-align: center;
 }
 
 .auth-box {
   border: 1px solid darkred;
+  border-radius: 18px;
   padding: 15px;
   width: 100%;
-  margin: 15px;
+  max-width: 380px;
+  margin: auto;
   box-shadow: 0 2px 6px rgba(0,0,0,0.4);
   position: relative;
   //animation: fadeIn 2s ease-out;
