--- a/client/app/scenes/Auth/style.scss
+++ b/client/app/scenes/Auth/style.scss
@@ -11,30 +11,26 @@
 }
 
 .auth-box {
-  border: 1px solid darkred;
-  border-radius: 18px;
+  border: 1px solid #9a9498;
+  color: #9a9498;
+  background: rgba(255,255,255,0.8);
+  border-radius: 1px;
   padding: 15px;
   width: 100%;
   max-width: 380px;
   margin: auto;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+  box-shadow: 0 18px 56px rgba(0,0,0,0.1);
   position: relative;
-  //animation: fadeIn 2s ease-out;
+  animation: fadeIn 1s ease;
   opacity: 1;
 }
 
 @keyframes fadeIn {
   0% {
     opacity: 0;
-    margin-top: 90px;
-  }
-
-  40% {
-    margin-top: -0px;
   }
   100% {
     opacity: 1;
-    margin-top: 15px;
   }
 
 }
