--- a/client/app/scenes/Shell/components/Header/style.scss
+++ b/client/app/scenes/Shell/components/Header/style.scss
@@ -6,6 +6,11 @@
   box-shadow: 0 2px 6px rgba(0,0,0,0.4);
   padding: 15px;
   z-index: 1;
+  height: 60px;
+
+  h5 {
+    margin: 5px auto;
+  }
 }
 
 .page-title {
