--- a/client/app/scenes/Shell/style.scss
+++ b/client/app/scenes/Shell/style.scss
@@ -1,6 +1,14 @@
 .shell {
   position: relative;
-  min-height: 100vh;
+  min-height: 100%;
   background: aliceblue;
   //border: 10px dashed blue;
+
+  .page-content {
+    //border: 10px dashed green;
+    min-height: 90%;
+    width: 100%;
+    padding: 60px 0;
+    align-items: center;
+  }
 }
