--- a/client/app/scenes/Dashboard/components/Posts/style.scss
+++ b/client/app/scenes/Dashboard/components/Posts/style.scss
@@ -29,3 +29,25 @@
     margin-left: 5px;
   }
 }
+
+.comments-container {
+  //max-height: 650px;
+  overflow: auto;
+  box-shadow: inset 0 2px 4px rgba(0,0,0,0.2);
+}
+
+.comments-container::-webkit-scrollbar {
+  width: 5px;
+}
+
+.comments-container::-webkit-scrollbar-track {
+  //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.2);
+  width: 5px;
+}
+
+.comments-container::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+  width: 5px;
+}
