--- a/client/app/scenes/Dashboard/components/Posts/style.scss
+++ b/client/app/scenes/Dashboard/components/Posts/style.scss
@@ -33,6 +33,7 @@
 .comments-container {
   //max-height: 650px;
   overflow: auto;
+  background: #37574d;
   box-shadow: inset 0 2px 4px rgba(0,0,0,0.2);
 }
 
