--- a/client/app/scenes/Shell/components/Header/style.scss
+++ b/client/app/scenes/Shell/components/Header/style.scss
@@ -15,5 +15,21 @@
 }
 
 .page-title {
-  color: aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  img {
+    max-width: 30px;
+    margin-right: 10px;
+  }
+
+  i {
+    margin-right: 5px;
+    opacity: 0.4;
+  }
+
+  strong {
+    margin-right: 5px;
+  }
 }
