--- a/client/app/scenes/Shell/components/Header/style.scss
+++ b/client/app/scenes/Shell/components/Header/style.scss
@@ -1,13 +1,7 @@
 .header {
-  //background: darkred;
   width: 100%;
-  //position: relative;
-  //top: 0;
-  //box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-  //padding: auto 15px;
   z-index: 1;
-  //margin: 0 15px;
-  //height: 60px;
+  margin-bottom: 15px;
 
   h5 {
     margin: 5px auto;
