--- a/client/app/scenes/Shell/components/Header/style.scss
+++ b/client/app/scenes/Shell/components/Header/style.scss
@@ -6,6 +6,13 @@
   h5 {
     margin: 5px auto;
   }
+
+  .header-title {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100%;
+  }
 }
 
 .page-title {
